# keybot

./: CMakeLists.txt  LICENSE  README.md
src/: cli.c  cli.h  constants.h  keyboard.c  keyboard.h  main.c  options.c  options.h  utils.c  utils.h
